1 centralising locations to minimise places to change later on