@@ -1,4 +1,4 @@
-import { createContext, useContext, useState } from "react";
+import { createContext, useContext,useCallback, useState } from "react";
 import axios from "axios";
 
 const Context = createContext();
@@ -6,11 +6,11 @@ const Context = createContext();
 const Provider = ({ children }) => {
   const [animeList, setAnimeList] = useState(false);
 
-  const fetchData = async () => {
+  const fetchData = useCallback(async () => {
     const response = await axios.get("https://api.jikan.moe/v4/anime");
     const { data: animes } = response.data;
     setAnimeList(animes);
-  };
+  },[setAnimeList]);
 
   const data = { animeList, setAnimeList, fetchData };
   return <Context.Provider value={data}>{children}</Context.Provider>;
