@@ -1,1 +1,3 @@
 1 centralising locations to minimise places to change later on
+2 not calling fetchdata on homepage , only when necessary
+3 minimising ton of anime requests
